--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -4292,6 +4292,62 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "import nbformat\n",
+        "\n",
+        "\n",
+        "import os\n",
+        "\n",
+        "drive_path = \"/content/drive/MyDrive\"\n",
+        "\n",
+        "for filename in os.listdir(drive_path):\n",
+        "    print(filename)\n",
+        "\n",
+        "\n",
+        "\n",
+        "notebook_path = \"/content/drive/MyDrive/Colab Notebooks/Text_Mining.ipynb\"\n",
+        "\n",
+        "\n",
+        "\n",
+        "with open(notebook_path, \"r\", encoding=\"utf-8\") as f:\n",
+        "    nb = nbformat.read(f, as_version=4)\n",
+        "\n",
+        "# Corrigir metadata.widgets\n",
+        "if \"widgets\" in nb[\"metadata\"]:\n",
+        "    if \"state\" not in nb[\"metadata\"][\"widgets\"]:\n",
+        "        nb[\"metadata\"][\"widgets\"][\"state\"] = {}\n",
+        "\n",
+        "with open(notebook_path, \"w\", encoding=\"utf-8\") as f:\n",
+        "    nbformat.write(nb, f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_1RgPbLRGBo7",
+        "outputId": "c0e64f62-4183-4440-989a-0d5c2ea6feff"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "Presença.gsheet\n",
+            "Lista de tarefas.gsheet\n",
+            "Monitor de investimentos do Google Finance.gsheet\n",
+            "Colab Notebooks\n",
+            "Cópia de Text_Mining.ipynb\n"
+          ]
+        }
+      ]
     }
   ]
 }
