--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -2152,11 +2152,11 @@
       "execution_count": null,
       "metadata": {
         "id": "pJ7IIZV8KBd-",
-        "outputId": "2703d565-9ef9-4888-d0fd-29f0597ce1f7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 56
-        }
+        },
+        "outputId": "2703d565-9ef9-4888-d0fd-29f0597ce1f7"
       },
       "outputs": [
         {
@@ -2417,10 +2417,10 @@
       ],
       "metadata": {
         "id": "IQb28v1Q_odu",
-        "outputId": "84ad98b1-ad90-4c46-c529-d4961f65dc3a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "84ad98b1-ad90-4c46-c529-d4961f65dc3a"
       },
       "execution_count": 4,
       "outputs": [
@@ -2456,10 +2456,10 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 05\n",
         "import pandas as pd\n",
         "from tqdm.auto import tqdm\n",
         "tqdm.pandas()\n",
-        "\n",
         "\n",
         "df = pd.read_csv(\"news-of-the-site-folhauol.zip\")"
       ],
@@ -2482,6 +2482,7 @@
       "cell_type": "code",
       "source": [
         "# Escreva seu código aqui\n",
+        "#Célula 06\n",
         "!pip install -U spacy\n",
         "!python -m spacy download pt_core_news_lg\n",
         "\n",
@@ -2490,10 +2491,10 @@
       ],
       "metadata": {
         "id": "k_KUolFmPDXx",
-        "outputId": "0d9335ec-7abd-4f5f-abb8-d153831acc6f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d9335ec-7abd-4f5f-abb8-d153831acc6f"
       },
       "execution_count": 6,
       "outputs": [
@@ -2580,31 +2581,21 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 07\n",
         "import nltk\n",
         "\n",
         "# Escreva seu código aqui\n",
         "nltk.download('stopwords')\n",
         "nltk.download('punkt')\n",
         "nltk.download('rslp')\n",
-        "nltk.download('punkt_tab')\n",
-        "\n",
-        "# Exemplo de uso para garantir que estão funcionando\n",
-        "from nltk.corpus import stopwords\n",
-        "from nltk.tokenize import word_tokenize\n",
-        "\n",
-        "texto = \"Exemplo de frase para tokenização e remoção de stopwords.\"\n",
-        "tokens = word_tokenize(texto, language='portuguese')\n",
-        "stop_words = set(stopwords.words('portuguese'))\n",
-        "tokens_filtrados = [w for w in tokens if w.lower() not in stop_words]\n",
-        "\n",
-        "print(tokens_filtrados)"
+        "nltk.download('punkt_tab')"
       ],
       "metadata": {
         "id": "q6KKTeHgPF3b",
-        "outputId": "1fa446d1-c606-4664-d1e6-b8aefce19aa0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "1fa446d1-c606-4664-d1e6-b8aefce19aa0"
       },
       "execution_count": 7,
       "outputs": [
@@ -2649,17 +2640,13 @@
     {
       "cell_type": "code",
       "source": [
-        "#!pip install pyldavis==3.2.2 &> /dev/null\n",
-        "!pip install pyldavis &> /dev/null\n",
+        "#Célula 08\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
         "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "from sklearn.decomposition import LatentDirichletAllocation as LDA\n",
         "import numpy as np\n",
-        "\n",
-        "import pyLDAvis\n",
-        "#import pyLDAvis.sklearn\n",
         "\n",
         "from wordcloud import WordCloud\n",
         "\n",
@@ -2668,7 +2655,6 @@
         "from itertools import chain\n",
         "\n",
         "from typing import List, Set, Any\n",
-        "\n",
         "\n",
         "SEED = 123"
       ],
@@ -2701,11 +2687,11 @@
       ],
       "metadata": {
         "id": "bce0QMD9Cd2N",
-        "outputId": "ead41c53-f553-4022-8fcc-7edf2aceef39",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 223
-        }
+        },
+        "outputId": "ead41c53-f553-4022-8fcc-7edf2aceef39"
       },
       "execution_count": 9,
       "outputs": [
@@ -3079,7 +3065,6 @@
       ],
       "metadata": {
         "id": "e0kNSRccMBy5",
-        "outputId": "da46dfe8-2dd3-460f-c164-59bb2a9fba0f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3096,7 +3081,8 @@
             "8a2d99828b27427580150d9ac5420645",
             "81c38097ff374d1ab2e4eac9c90cbbfb"
           ]
-        }
+        },
+        "outputId": "da46dfe8-2dd3-460f-c164-59bb2a9fba0f"
       },
       "execution_count": 10,
       "outputs": [
@@ -3140,7 +3126,6 @@
       ],
       "metadata": {
         "id": "8XQvUL6WDiV5",
-        "outputId": "77270906-29b9-41a3-a3b8-91380ca95b07",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3157,7 +3142,8 @@
             "12af5a0a31784396b60abde1df13afa4",
             "d69a4ce6937c4cb6b8545c0974d7e3d1"
           ]
-        }
+        },
+        "outputId": "77270906-29b9-41a3-a3b8-91380ca95b07"
       },
       "execution_count": 11,
       "outputs": [
@@ -3230,7 +3216,6 @@
       ],
       "metadata": {
         "id": "kiEdxHA7JKVO",
-        "outputId": "11afd6d7-83c6-40d0-f020-a07d0094bfc6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3247,7 +3232,8 @@
             "e7d126033d304e6590aa0ec97bab4c3c",
             "46d8c63572934272915e867c2c601163"
           ]
-        }
+        },
+        "outputId": "11afd6d7-83c6-40d0-f020-a07d0094bfc6"
       },
       "execution_count": 12,
       "outputs": [
@@ -3292,7 +3278,6 @@
       ],
       "metadata": {
         "id": "HBkwT6fdkDaX",
-        "outputId": "9354fc3a-2fa3-4dd0-e0bf-c2978bdea777",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3309,7 +3294,8 @@
             "41cb0d2eb35043c1ae13869867948a05",
             "578a73d85782451991c6c8c039e59d36"
           ]
-        }
+        },
+        "outputId": "9354fc3a-2fa3-4dd0-e0bf-c2978bdea777"
       },
       "execution_count": 13,
       "outputs": [
@@ -3386,7 +3372,6 @@
       ],
       "metadata": {
         "id": "ucwxtHrBmAqu",
-        "outputId": "7cbc9282-1339-496b-f427-8432241ebb92",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3403,7 +3388,8 @@
             "3ced751d772545548b29e300867290f2",
             "328f04a831b941f9aa77efa69a6de93e"
           ]
-        }
+        },
+        "outputId": "7cbc9282-1339-496b-f427-8432241ebb92"
       },
       "execution_count": 14,
       "outputs": [
@@ -3454,11 +3440,11 @@
       ],
       "metadata": {
         "id": "BKp7g1O3neG_",
-        "outputId": "3f71c3a9-5171-44f4-d7e3-d379b4ee9d6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "outputId": "3f71c3a9-5171-44f4-d7e3-d379b4ee9d6f"
       },
       "execution_count": 15,
       "outputs": [
@@ -3918,7 +3904,6 @@
       ],
       "metadata": {
         "id": "RcXpEfM-3sgg",
-        "outputId": "06625354-4847-4acb-e1b8-73590b110de6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49,
@@ -3935,7 +3920,8 @@
             "add51dcb777c4cd3a7587b68bc1d15ec",
             "bca53e750ced40f5b21e677082082fe1"
           ]
-        }
+        },
+        "outputId": "06625354-4847-4acb-e1b8-73590b110de6"
       },
       "execution_count": 18,
       "outputs": [
@@ -3980,11 +3966,11 @@
       ],
       "metadata": {
         "id": "M_qmqn2j6bCI",
-        "outputId": "428f2856-d302-42d5-a497-c13fc6d823fa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 211
-        }
+        },
+        "outputId": "428f2856-d302-42d5-a497-c13fc6d823fa"
       },
       "execution_count": 1,
       "outputs": [
@@ -4051,11 +4037,11 @@
       ],
       "metadata": {
         "id": "tLVrwjNr6r1c",
-        "outputId": "c4299836-0adb-4971-81e0-a6c2655d54db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "c4299836-0adb-4971-81e0-a6c2655d54db"
       },
       "execution_count": 20,
       "outputs": [
@@ -4107,11 +4093,11 @@
       ],
       "metadata": {
         "id": "IbaUfOtkCIaj",
-        "outputId": "388d7157-4142-440a-c991-1d30a7549d75",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "388d7157-4142-440a-c991-1d30a7549d75"
       },
       "execution_count": 21,
       "outputs": [
