--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -2149,12 +2149,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "pJ7IIZV8KBd-",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 73
         },
         "outputId": "2703d565-9ef9-4888-d0fd-29f0597ce1f7"
       },
@@ -2352,6 +2352,13 @@
             ]
           },
           "metadata": {}
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving news-of-the-site-folhauol.zip to news-of-the-site-folhauol.zip\n"
+          ]
         }
       ],
       "source": [
@@ -2382,10 +2389,23 @@
         "!chmod 600 .kaggle/kaggle.json"
       ],
       "metadata": {
-        "id": "LbDIrz7dAM_L"
+        "id": "LbDIrz7dAM_L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1fd1d73c-6d9f-4406-8d15-b4e09d1e66f2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "cp: cannot stat 'kaggle.json': No such file or directory\n",
+            "chmod: cannot access '.kaggle/kaggle.json': No such file or directory\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2397,7 +2417,7 @@
       "metadata": {
         "id": "oijNbMGkzNQh"
       },
-      "execution_count": 3,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -2420,9 +2440,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "84ad98b1-ad90-4c46-c529-d4961f65dc3a"
+        "outputId": "f18ab996-54c8-4bb8-a021-a037a8e64406"
       },
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -2431,8 +2451,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/marlesson/news-of-the-site-folhauol\n",
             "License(s): CC0-1.0\n",
             "Downloading news-of-the-site-folhauol.zip to /content\n",
-            " 82% 153M/187M [00:00<00:00, 565MB/s] \n",
-            "100% 187M/187M [00:00<00:00, 438MB/s]\n"
+            " 92% 172M/187M [00:00<00:00, 642MB/s] \n",
+            "100% 187M/187M [00:00<00:00, 637MB/s]\n"
           ]
         }
       ]
@@ -2466,7 +2486,7 @@
       "metadata": {
         "id": "t2jwPcZmACnN"
       },
-      "execution_count": 5,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -2494,9 +2514,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0d9335ec-7abd-4f5f-abb8-d153831acc6f"
+        "outputId": "5137039d-96ab-4490-d8aa-2885fc48a694"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -2547,7 +2567,7 @@
             "Requirement already satisfied: wrapt in /usr/local/lib/python3.11/dist-packages (from smart-open<8.0.0,>=5.2.1->weasel<0.5.0,>=0.1.0->spacy) (1.17.2)\n",
             "Requirement already satisfied: mdurl~=0.1 in /usr/local/lib/python3.11/dist-packages (from markdown-it-py>=2.2.0->rich>=10.11.0->typer<1.0.0,>=0.3.0->spacy) (0.1.2)\n",
             "Downloading spacy-3.8.6-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (30.6 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.6/30.6 MB\u001b[0m \u001b[31m63.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m30.6/30.6 MB\u001b[0m \u001b[31m60.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: spacy\n",
             "  Attempting uninstall: spacy\n",
             "    Found existing installation: spacy 3.8.5\n",
@@ -2556,7 +2576,7 @@
             "Successfully installed spacy-3.8.6\n",
             "Collecting pt-core-news-lg==3.8.0\n",
             "  Downloading https://github.com/explosion/spacy-models/releases/download/pt_core_news_lg-3.8.0/pt_core_news_lg-3.8.0-py3-none-any.whl (568.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m568.2/568.2 MB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m568.2/568.2 MB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hInstalling collected packages: pt-core-news-lg\n",
             "Successfully installed pt-core-news-lg-3.8.0\n",
             "\u001b[38;5;2m✔ Download and installation successful\u001b[0m\n",
@@ -2595,36 +2615,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1fa446d1-c606-4664-d1e6-b8aefce19aa0"
+        "outputId": "cd0e9025-7b8a-462d-f8d0-2db61f0f110f"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
             "[nltk_data] Downloading package rslp to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping stemmers/rslp.zip.\n",
-            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n"
+            "[nltk_data]   Package rslp is already up-to-date!\n",
+            "[nltk_data] Downloading package punkt_tab to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt_tab is already up-to-date!\n"
           ]
         },
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['Exemplo', 'frase', 'tokenização', 'remoção', 'stopwords', '.']\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data]   Unzipping tokenizers/punkt_tab.zip.\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
         }
       ]
     },
@@ -2661,7 +2678,7 @@
       "metadata": {
         "id": "CkvbUB4woQFo"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -2678,6 +2695,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 09\n",
         "df['date'] = pd.to_datetime(df.date)\n",
         "# Create a dataframe named news_2016\n",
         "news_2016 = df[(df['date'].dt.year == 2016) & (df['category'].str.lower() == 'mercado')].copy()\n",
@@ -2691,9 +2709,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 223
         },
-        "outputId": "ead41c53-f553-4022-8fcc-7edf2aceef39"
+        "outputId": "e064ffea-e5c7-4acf-e6c8-3e4ee17d16d6"
       },
-      "execution_count": 9,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -2729,7 +2747,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5c952c74-edd5-4f0e-933b-3c2dfb5a074b\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e9d49ac1-a961-4c79-a0bd-f53c14b5a958\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -2808,7 +2826,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5c952c74-edd5-4f0e-933b-3c2dfb5a074b')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e9d49ac1-a961-4c79-a0bd-f53c14b5a958')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -2860,12 +2878,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5c952c74-edd5-4f0e-933b-3c2dfb5a074b button.colab-df-convert');\n",
+              "        document.querySelector('#df-e9d49ac1-a961-4c79-a0bd-f53c14b5a958 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5c952c74-edd5-4f0e-933b-3c2dfb5a074b');\n",
+              "        const element = document.querySelector('#df-e9d49ac1-a961-4c79-a0bd-f53c14b5a958');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -2885,8 +2903,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-130800a1-50c4-4af4-bc07-dcca4cae1295\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-130800a1-50c4-4af4-bc07-dcca4cae1295')\"\n",
+              "    <div id=\"df-9824e766-f1ea-4d8e-9b01-7f820aece85b\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9824e766-f1ea-4d8e-9b01-7f820aece85b')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -3005,7 +3023,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-130800a1-50c4-4af4-bc07-dcca4cae1295 button');\n",
+              "            document.querySelector('#df-9824e766-f1ea-4d8e-9b01-7f820aece85b button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -3022,7 +3040,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 9
+          "execution_count": 13
         }
       ]
     },
@@ -3041,6 +3059,8 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 10\n",
+        "import re\n",
         "from nltk.tokenize import word_tokenize\n",
         "from nltk.stem import RSLPStemmer\n",
         "from nltk.corpus import stopwords\n",
@@ -3057,6 +3077,8 @@
         "               characters will be returned.\n",
         "  \"\"\"\n",
         "  #escreva seu código aqui\n",
+        "  text = text.lower()\n",
+        "  text = re.sub(r'[^a-z\\s]', '', text)\n",
         "  tokens = word_tokenize(text, language='portuguese')\n",
         "  stems = [stemmer.stem(token.lower()) for token in tokens if token.isalpha()]\n",
         "  return stems\n",
