--- a/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
+++ b/Questionário_Projeto_de_Disciplina_de_Text_Mining.ipynb
@@ -16,7 +16,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "a23d6777e3644cfd90b6f3504b150762": {
+        "a4acce90bd454dd7ac21f8da5c8e6e2a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -31,14 +31,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_8347c34b4bc544ceb26e52e1cee7dd44",
-              "IPY_MODEL_0779c7485f684238858866a60f53f7e3",
-              "IPY_MODEL_bf203f58c7f540f794b933ffe52aa154"
+              "IPY_MODEL_6d15b00fb0c74ea29629d2cbd5f63635",
+              "IPY_MODEL_47e797082b8046fcb5e89f69fa202522",
+              "IPY_MODEL_8434d2fc43a34834b778ba29c5ef05ce"
             ],
-            "layout": "IPY_MODEL_4602c3f936c44646b5ee18489025ed8d"
+            "layout": "IPY_MODEL_eda388fa727d43e78373806c90ea251c"
           }
         },
-        "8347c34b4bc544ceb26e52e1cee7dd44": {
+        "6d15b00fb0c74ea29629d2cbd5f63635": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -53,13 +53,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_8358269294ef41afb9044a359e82a7f6",
+            "layout": "IPY_MODEL_26d760ed61174c898557cbab49c56666",
             "placeholder": "​",
-            "style": "IPY_MODEL_d868754bb443452bbc7990288478a31a",
+            "style": "IPY_MODEL_d10ff7bea30e4c5ebe0a56c3ffc94a36",
             "value": "100%"
           }
         },
-        "0779c7485f684238858866a60f53f7e3": {
+        "47e797082b8046fcb5e89f69fa202522": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -75,15 +75,15 @@
             "bar_style": "success",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_83176bbda175419a94d722d0e2d66282",
+            "layout": "IPY_MODEL_229d93199b734d83a426483c228ce19a",
             "max": 7943,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_76794abb47bb4312a9a86d32cbe9b62a",
+            "style": "IPY_MODEL_16db98189ca142f4aae8342466d7ae8a",
             "value": 7943
           }
         },
-        "bf203f58c7f540f794b933ffe52aa154": {
+        "8434d2fc43a34834b778ba29c5ef05ce": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -98,13 +98,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_8a2d99828b27427580150d9ac5420645",
+            "layout": "IPY_MODEL_c3d49aa514374220acd7e467862507e1",
             "placeholder": "​",
-            "style": "IPY_MODEL_81c38097ff374d1ab2e4eac9c90cbbfb",
-            "value": " 7943/7943 [02:21&lt;00:00, 52.50it/s]"
+            "style": "IPY_MODEL_5c90ded5db574bb38f387d10a580341d",
+            "value": " 7943/7943 [01:38&lt;00:00, 93.48it/s]"
           }
         },
-        "4602c3f936c44646b5ee18489025ed8d": {
+        "eda388fa727d43e78373806c90ea251c": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -156,7 +156,7 @@
             "width": null
           }
         },
-        "8358269294ef41afb9044a359e82a7f6": {
+        "26d760ed61174c898557cbab49c56666": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -208,7 +208,7 @@
             "width": null
           }
         },
-        "d868754bb443452bbc7990288478a31a": {
+        "d10ff7bea30e4c5ebe0a56c3ffc94a36": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -223,7 +223,7 @@
             "description_width": ""
           }
         },
-        "83176bbda175419a94d722d0e2d66282": {
+        "229d93199b734d83a426483c228ce19a": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -275,7 +275,7 @@
             "width": null
           }
         },
-        "76794abb47bb4312a9a86d32cbe9b62a": {
+        "16db98189ca142f4aae8342466d7ae8a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -291,7 +291,7 @@
             "description_width": ""
           }
         },
-        "8a2d99828b27427580150d9ac5420645": {
+        "c3d49aa514374220acd7e467862507e1": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -343,7 +343,7 @@
             "width": null
           }
         },
-        "81c38097ff374d1ab2e4eac9c90cbbfb": {
+        "5c90ded5db574bb38f387d10a580341d": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -358,7 +358,7 @@
             "description_width": ""
           }
         },
-        "72697dbfc6054a13b5add9976712b914": {
+        "2edb5381dfd34f6699dfe94c37d42b0b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HBoxModel",
           "model_module_version": "1.5.0",
@@ -373,14 +373,14 @@
             "_view_name": "HBoxView",
             "box_style": "",
             "children": [
-              "IPY_MODEL_365283d4646c412dbb82074da5a399a7",
-              "IPY_MODEL_2444197fb3d9458cabc5212899e2f463",
-              "IPY_MODEL_dc68509aae5d4f64886fb3f7a84f034a"
+              "IPY_MODEL_72816279f841429ebb74f45c49a84827",
+              "IPY_MODEL_73d4b36fdef44ced943581950d806ebb",
+              "IPY_MODEL_b179e02c7ae746bdb172075db5867df3"
             ],
-            "layout": "IPY_MODEL_0b5a4ec931054e33ba20ae144480127f"
+            "layout": "IPY_MODEL_535e015fc9db423ab47ba8712172f9d0"
           }
         },
-        "365283d4646c412dbb82074da5a399a7": {
+        "72816279f841429ebb74f45c49a84827": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -395,13 +395,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_cf0d1935a5d44cfd935d96f33d503100",
+            "layout": "IPY_MODEL_aec4500d91b3415dbe2158d9b56da14d",
             "placeholder": "​",
-            "style": "IPY_MODEL_cc40b16493264501932a894b26980d96",
-            "value": "100%"
+            "style": "IPY_MODEL_108d3bc9defb47e492a7ce2a781c369a",
+            "value": "  4%"
           }
         },
-        "2444197fb3d9458cabc5212899e2f463": {
+        "73d4b36fdef44ced943581950d806ebb": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "FloatProgressModel",
           "model_module_version": "1.5.0",
@@ -414,18 +414,18 @@
             "_view_module": "@jupyter-widgets/controls",
             "_view_module_version": "1.5.0",
             "_view_name": "ProgressView",
-            "bar_style": "success",
+            "bar_style": "",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_497b81987e4d43d99e101eebaa189bba",
+            "layout": "IPY_MODEL_9f07d3e7059a4930a05a4f68e69244fb",
             "max": 7943,
             "min": 0,
             "orientation": "horizontal",
-            "style": "IPY_MODEL_6aaf7cdf08f44895af9c38562eeef3fc",
-            "value": 7943
+            "style": "IPY_MODEL_04c809fd6a484da48a5f248bba644473",
+            "value": 313
           }
         },
-        "dc68509aae5d4f64886fb3f7a84f034a": {
+        "b179e02c7ae746bdb172075db5867df3": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "HTMLModel",
           "model_module_version": "1.5.0",
@@ -440,13 +440,13 @@
             "_view_name": "HTMLView",
             "description": "",
             "description_tooltip": null,
-            "layout": "IPY_MODEL_12af5a0a31784396b60abde1df13afa4",
+            "layout": "IPY_MODEL_ff2f53d010264d1c998d7d9a215b6603",
             "placeholder": "​",
-            "style": "IPY_MODEL_d69a4ce6937c4cb6b8545c0974d7e3d1",
-            "value": " 7943/7943 [12:07&lt;00:00,  6.60it/s]"
+            "style": "IPY_MODEL_1346a9cc07334717861b87bedd739a50",
+            "value": " 313/7943 [00:33&lt;26:53,  4.73it/s]"
           }
         },
-        "0b5a4ec931054e33ba20ae144480127f": {
+        "535e015fc9db423ab47ba8712172f9d0": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -498,7 +498,7 @@
             "width": null
           }
         },
-        "cf0d1935a5d44cfd935d96f33d503100": {
+        "aec4500d91b3415dbe2158d9b56da14d": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -550,7 +550,7 @@
             "width": null
           }
         },
-        "cc40b16493264501932a894b26980d96": {
+        "108d3bc9defb47e492a7ce2a781c369a": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -565,7 +565,7 @@
             "description_width": ""
           }
         },
-        "497b81987e4d43d99e101eebaa189bba": {
+        "9f07d3e7059a4930a05a4f68e69244fb": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -617,7 +617,7 @@
             "width": null
           }
         },
-        "6aaf7cdf08f44895af9c38562eeef3fc": {
+        "04c809fd6a484da48a5f248bba644473": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ProgressStyleModel",
           "model_module_version": "1.5.0",
@@ -633,7 +633,7 @@
             "description_width": ""
           }
         },
-        "12af5a0a31784396b60abde1df13afa4": {
+        "ff2f53d010264d1c998d7d9a215b6603": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -685,7 +685,7 @@
             "width": null
           }
         },
-        "d69a4ce6937c4cb6b8545c0974d7e3d1": {
+        "1346a9cc07334717861b87bedd739a50": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -3080,8 +3080,11 @@
         "  text = text.lower()\n",
         "  text = re.sub(r'[^a-z\\s]', '', text)\n",
         "  tokens = word_tokenize(text, language='portuguese')\n",
-        "  stems = [stemmer.stem(token.lower()) for token in tokens if token.isalpha()]\n",
-        "  return stems\n",
+        "  custom_stop_words = set(stopwords.words('portuguese'))\n",
+        "  cleaned_tokens = [token for token in tokens if token not in custom_stop_words]\n",
+        "  cleaned_tokens = [token for token in cleaned_tokens if len(token) > 2]\n",
+        "  cleaned_tokens = [stemmer.stem(word) for word in cleaned_tokens]\n",
+        "  return ' '.join(cleaned_tokens)\n",
         "\n",
         "news_2016.loc[:, 'nltk_tokens'] = news_2016.text.progress_map(tokenize)"
       ],
@@ -3091,22 +3094,22 @@
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "a23d6777e3644cfd90b6f3504b150762",
-            "8347c34b4bc544ceb26e52e1cee7dd44",
-            "0779c7485f684238858866a60f53f7e3",
-            "bf203f58c7f540f794b933ffe52aa154",
-            "4602c3f936c44646b5ee18489025ed8d",
-            "8358269294ef41afb9044a359e82a7f6",
-            "d868754bb443452bbc7990288478a31a",
-            "83176bbda175419a94d722d0e2d66282",
-            "76794abb47bb4312a9a86d32cbe9b62a",
-            "8a2d99828b27427580150d9ac5420645",
-            "81c38097ff374d1ab2e4eac9c90cbbfb"
+            "a4acce90bd454dd7ac21f8da5c8e6e2a",
+            "6d15b00fb0c74ea29629d2cbd5f63635",
+            "47e797082b8046fcb5e89f69fa202522",
+            "8434d2fc43a34834b778ba29c5ef05ce",
+            "eda388fa727d43e78373806c90ea251c",
+            "26d760ed61174c898557cbab49c56666",
+            "d10ff7bea30e4c5ebe0a56c3ffc94a36",
+            "229d93199b734d83a426483c228ce19a",
+            "16db98189ca142f4aae8342466d7ae8a",
+            "c3d49aa514374220acd7e467862507e1",
+            "5c90ded5db574bb38f387d10a580341d"
           ]
         },
-        "outputId": "da46dfe8-2dd3-460f-c164-59bb2a9fba0f"
+        "outputId": "7caa1d2d-f756-4e13-fcc8-f49ac74ec972"
       },
-      "execution_count": 10,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3117,7 +3120,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "a23d6777e3644cfd90b6f3504b150762"
+              "model_id": "a4acce90bd454dd7ac21f8da5c8e6e2a"
             }
           },
           "metadata": {}
@@ -3138,12 +3141,11 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 11\n",
         "# Escreva seu código aqui\n",
         "\n",
-        "# Carregar o modelo de linguagem português (grande)\n",
         "nlp = spacy.load(\"pt_core_news_lg\")\n",
         "\n",
-        "# Aplicar o modelo SpaCy a cada texto\n",
         "news_2016.loc[:, 'spacy_doc'] = news_2016.text.progress_map(nlp)"
       ],
       "metadata": {
@@ -3152,36 +3154,36 @@
           "base_uri": "https://localhost:8080/",
           "height": 49,
           "referenced_widgets": [
-            "72697dbfc6054a13b5add9976712b914",
-            "365283d4646c412dbb82074da5a399a7",
-            "2444197fb3d9458cabc5212899e2f463",
-            "dc68509aae5d4f64886fb3f7a84f034a",
-            "0b5a4ec931054e33ba20ae144480127f",
-            "cf0d1935a5d44cfd935d96f33d503100",
-            "cc40b16493264501932a894b26980d96",
-            "497b81987e4d43d99e101eebaa189bba",
-            "6aaf7cdf08f44895af9c38562eeef3fc",
-            "12af5a0a31784396b60abde1df13afa4",
-            "d69a4ce6937c4cb6b8545c0974d7e3d1"
+            "2edb5381dfd34f6699dfe94c37d42b0b",
+            "72816279f841429ebb74f45c49a84827",
+            "73d4b36fdef44ced943581950d806ebb",
+            "b179e02c7ae746bdb172075db5867df3",
+            "535e015fc9db423ab47ba8712172f9d0",
+            "aec4500d91b3415dbe2158d9b56da14d",
+            "108d3bc9defb47e492a7ce2a781c369a",
+            "9f07d3e7059a4930a05a4f68e69244fb",
+            "04c809fd6a484da48a5f248bba644473",
+            "ff2f53d010264d1c998d7d9a215b6603",
+            "1346a9cc07334717861b87bedd739a50"
           ]
         },
-        "outputId": "77270906-29b9-41a3-a3b8-91380ca95b07"
+        "outputId": "5161fc13-cddf-478d-9767-7ce5d9735d72"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
+          "output_type": "display_data",
           "data": {
-            "application/vnd.jupyter.widget-view+json": {
-              "model_id": "72697dbfc6054a13b5add9976712b914",
-              "version_major": 2,
-              "version_minor": 0
-            },
             "text/plain": [
               "  0%|          | 0/7943 [00:00<?, ?it/s]"
-            ]
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "2edb5381dfd34f6699dfe94c37d42b0b"
+            }
           },
-          "metadata": {},
-          "output_type": "display_data"
+          "metadata": {}
         }
       ]
     },
@@ -3205,6 +3207,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#Célula 12\n",
         "def stopwords() -> Set:\n",
         "    \"\"\"\n",
         "    Return complete list of stopwords\n",
